1.5
 * Added support for editing triggers
 * Added elevation support for restarting services

1.4
 * Improved Services submenu when there is only one service

1.3
 * Added Services submenu for processes

1.2
 * Added Other tab

1.1
 * Added Restart menu item for services
 * Fixed service handle leak

1.0
 * Initial release