@@ -159,21 +159,23 @@ BEGIN
     CONTROL         "",IDC_PROGRESS,"msctls_progress32",WS_BORDER,7,21,190,14
 END
 
-IDD_SRVOTHER DIALOGEX 0, 0, 282, 204
+IDD_SRVOTHER DIALOGEX 0, 0, 282, 218
 STYLE DS_SETFONT | DS_MODALFRAME | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 CAPTION "Other"
 FONT 8, "MS Shell Dlg", 400, 0, 0x1
 BEGIN
     LTEXT           "Preshutdown timeout:",IDC_STATIC,7,8,72,8
-    EDITTEXT        IDC_PRESHUTDOWNTIMEOUT,85,7,75,12,ES_AUTOHSCROLL | ES_READONLY
+    EDITTEXT        IDC_PRESHUTDOWNTIMEOUT,85,7,75,12,ES_AUTOHSCROLL
     LTEXT           "milliseconds",IDC_STATIC,166,8,38,8
     LTEXT           "Required privileges:",IDC_STATIC,7,21,64,8
-    CONTROL         "",IDC_PRIVILEGES,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,32,268,59
-    LTEXT           "Triggers:",IDC_TRIGGERS_LABEL,7,95,30,8
-    CONTROL         "",IDC_TRIGGERS,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,106,268,73
-    PUSHBUTTON      "New...",IDC_NEW,117,183,50,14
-    PUSHBUTTON      "Edit...",IDC_EDIT,171,183,50,14
-    PUSHBUTTON      "Delete",IDC_DELETE,225,183,50,14
+    CONTROL         "",IDC_PRIVILEGES,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,32,268,59
+    LTEXT           "Triggers:",IDC_TRIGGERS_LABEL,7,109,30,8
+    CONTROL         "",IDC_TRIGGERS,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,7,120,268,73
+    PUSHBUTTON      "New...",IDC_NEW,117,197,50,14
+    PUSHBUTTON      "Edit...",IDC_EDIT,171,197,50,14
+    PUSHBUTTON      "Delete",IDC_DELETE,225,197,50,14
+    PUSHBUTTON      "Remove",IDC_REMOVE,225,96,50,14
+    PUSHBUTTON      "Add...",IDC_ADD,171,96,50,14
 END
 
 IDD_OPTIONS DIALOGEX 0, 0, 215, 54
@@ -202,7 +204,7 @@ BEGIN
     LTEXT           "Action:",IDC_STATIC,7,59,24,8
     COMBOBOX        IDC_ACTION,52,58,72,30,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     LTEXT           "Data items:",IDC_STATIC,7,76,38,8
-    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,52,79,217,90
+    CONTROL         "",IDC_LIST,"SysListView32",LVS_REPORT | LVS_SINGLESEL | LVS_SHOWSELALWAYS | LVS_ALIGNLEFT | WS_BORDER | WS_TABSTOP,52,79,217,90
     PUSHBUTTON      "New...",IDC_NEW,273,79,50,14
     PUSHBUTTON      "Edit...",IDC_EDIT,273,96,50,14
     PUSHBUTTON      "Delete",IDC_DELETE,273,113,50,14
@@ -273,7 +275,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 275
         TOPMARGIN, 7
-        BOTTOMMARGIN, 197
+        BOTTOMMARGIN, 211
     END
 
     IDD_OPTIONS, DIALOG
